--- a/exercicios-pdf/ex20/index.html
+++ b/exercicios-pdf/ex20/index.html
@@ -12,10 +12,11 @@
         <h1>Estações do Ano</h1>
     </header>
     <main>
-        <p> Digite o Mês:
-            <input type="text" name="estacao" id="estacao">
-        </p>
-        <input type="submit" value="start" onclick="iniciar()">
+            <p>Digite o mês:
+                <input type="text" name="estacao" id="estacao" placeholder="ex: Novembro">
+            </p>
+            <input type="submit" value="start" onclick="iniciar()">
+
         <p id="texto"></p>
     </main>
     <footer>&copy; jonaldo</footer>
